<resources>
    <string name="app_name">AD340Assignment1</string>
    <string name="text">Brennan, Ryan 04/19/2018</string>
    <string name="action_settings">Item</string>
    <string name="menu_click">Menu Clicked!</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_age">Age…</string>
    <string name="enter_birthday">Enter Birthday</string>
    <string name="login">Login</string>
    <string name="intro_text">Thanks for signing up </string>
    <string name="error_message">Must be 18 or older to proceed</string>
    <!--<string name="error_title">Error</string>-->
    <string name="age_limit">18</string>
    <string name="on_back">Back</string>
    <string name="alert_close">OK</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="description">Say something about yourself</string>
    <string name="occupation">Occupation</string>
    <string name="name_placeholder">Name, Age</string>
    <string name="description_placeholder">Description</string>
    <string name="occupation_placeholder">Occupation</string>
    <string name="email_address_placeholder">Email Address</string>
    <string name="settings_text">Settings feature coming soon!</string>
    <string name="matches_text">Matches feature coming soon!</string>
    <string name="card_title">Title of Picture</string>
    <string name="card_desc">Text of Picture</string>
    <string name="favorite">favorite</string>
    <string name="mischevious">mischevious</string>
    <string name="reminder_time">Reminder Time</string>
    <string name="match_distance_search">Match Distance Search</string>
    <string name="gender">Gender</string>
    <string name="privacy">Privacy</string>
    <string name="min_age_range">Min Age Range</string>
    <string name="max_age_range">Max Age Range</string>
    <string name="update">update</string>
    <string name="delete">delete</string>
    <string name="not_private">Not Private</string>
    <string name="email">email</string>
    <string name="dummy_email">test@test.com</string>
    <string name="go_to_location_example">Go To Location Example</string>
    <string name="enable_location">Enable Location</string>
    <string name="location_message">Your Locations Settings is set to \'Off\'. Please Enable Location to use this app</string>
    <string name="location_settings">Location Settings</string>
    <string name="location_cancel">Cancel</string>
    <string name="network_provider_started_running">Network provider started running</string>
    <string name="network_provider_update">Network Provider update</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="email_label">Email:</string>
    <string name="reminder_time_label">Reminder Time:</string>
    <string name="search_radius_label">Search Radius:</string>
    <string name="gender_label">Gender:</string>
    <string name="privacy_status_label">Privacy Status:</string>
    <string name="from_age_label">From Age</string>
    <string name="age_to_label">to</string>
</resources>
