<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/relativeLayout"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        tools:context=".MainActivity"
        android:orientation="vertical">

        <EditText
            android:id="@+id/nameEditText"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="93dp" />

        <EditText
            android:id="@+id/emailAddress"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="151dp" />

        <EditText
            android:id="@+id/username"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_username"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="206dp" />

        <EditText
            android:id="@+id/birthday"
            android:inputType="date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_birthday"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="265dp"
            android:focusable="false"/>

        <TextView
            android:id="@+id/age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_age"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="326dp" />

        <EditText
            android:id="@+id/description"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"/>

        <EditText
            android:id="@+id/occupation"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/occupation"/>

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:onClick="onLogin"/>

    </LinearLayout>
</ScrollView>
