<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--<TextView-->
            <!--android:id="@+id/textView"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:text="@string/intro_text"-->
            <!--android:textStyle="bold"-->
            <!--android:layout_marginTop="70dp"/>-->

        <ImageView
            android:id="@+id/profile_pic"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="90dp"
            android:contentDescription="@string/profile_picture"
            android:scaleType="fitXY"
            android:src="@drawable/dancing"
            app:srcCompat="@drawable/dancing" />

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/profile_pic"
            android:layout_alignStart="@id/profile_pic"
            android:text="@string/name_placeholder"/>

        <TextView
            android:id="@+id/occupationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/profile_pic"
            android:layout_alignEnd="@id/profile_pic"
            android:text="@string/occupation_placeholder"/>

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@id/occupationTextView"
            android:layout_alignStart="@id/profile_pic"
            android:text="@string/email_address_placeholder"/>

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@id/emailTextView"
            android:layout_alignStart="@id/profile_pic"
            android:text="@string/description_placeholder"/>

        <TextView
            android:id="@+id/latitudeValueNetwork"
            android:layout_below="@id/descriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/longitudeValueNetwork"
            android:layout_toEndOf="@+id/latitudeValueNetwork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <!--<Button-->
            <!--android:id="@+id/backBtn"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/on_back"-->
            <!--android:onClick="onBack"-->
            <!--android:layout_below="@id/descriptionTextView"/>-->
    </RelativeLayout>
</ScrollView>